--- a/sample/css/style03.css
+++ b/sample/css/style03.css
@@ -20,7 +20,7 @@
   height: 100px;
   bottom: 200px;
   left: 190px;
-  background-color: #00f;
+  background-color: rgb(188, 159, 255);
 }
 
 #m_hand{
@@ -29,7 +29,7 @@
   height: 180px;
   bottom: 200px;
   left: 195px;
-  background-color: #0f0;
+  background-color: rgb(205, 119, 255);
 }
 
 #s_hand{
@@ -38,12 +38,12 @@
   height: 200px;
   bottom: 200px;
   left: 198px;
-  background-color: #f00;
+  background-color: rgb(237, 215, 255);
 }
 
 .time_txt{
   padding: 10px;
-  border-bottom: 1px solid #666;
+  border-bottom: 1px solid rgb(224, 224, 224);
   margin-bottom: 10px;
 }
 
@@ -59,7 +59,7 @@
 
 #btn{
   cursor: pointer;
-  background-color: rgb(72, 102, 235);
+  background-color: rgb(255, 193, 236);
   border-radius: 3px;
   color: #fff;
   text-align: center;
