--- a/sample/css/style03.css
+++ b/sample/css/style03.css
@@ -43,7 +43,7 @@
 
 .time_txt{
   padding: 10px;
-  border-bottom: 1px solid rgb(224, 224, 224);
+  border-bottom: 1px solid rgb(255, 255, 255);
   margin-bottom: 10px;
 }
 
@@ -69,7 +69,7 @@
 
 textarea{
   border-radius: 3px;
-  border: 1px solid #333;
+  border: 1px solid rgb(201, 247, 255);
   padding: 10px;
   width: 100%;
   margin-bottom: 10px;
@@ -82,7 +82,7 @@ textarea{
   height: 100%;
   right: 0px;
   top: 0px;
-  background-color: #333;
+  background-color: rgb(201, 247, 255);
   overflow: auto;
   color: #ccc;
 }
